--- a/check/check.html
+++ b/check/check.html
@@ -17,25 +17,25 @@
         </div>
     </div>
     <div class="chat-container">
+        <!-- contacts section -->
         <div class="user-list">
             <h3>Contacts</h3>
-            <ul id="users">
-                <li data-user="User 1">User 1</li>
-                <li data-user="User 2">User 2</li>
-            </ul>
+            <ul id="users"></ul>
         </div>
         <!-- Chat section -->
-        <div class="chat-section">
+         <div class="chat-section">
             <div class="chat-header" id="chatHeader">Chats</div>
             <div class="chat-box" id="chatBox"></div>
             <div class="message-input">
-                <input type="text" id="messageInput" placeholder="Type...">
-                <button id="sendBtn">Send</button>
+                <form action="#" id="sendForm">
+                    <input type="text" id="messageInput" placeholder="Type...">
+                    <button id="btn" type="submit">Send</button>
+                </form>    
             </div>
-        </div>
+         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="/js/config.js"></script>
-    <script src="chat.js"></script>
+    <script src="/js/chat.js"></script>
 </body>
 </html>
